PR_GetPhysicalMemorySize can actually return zero (DragonFly BSD)
Categories
(Core :: Widget: Gtk, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox111 | --- | fixed |
People
(Reporter: arcade, Assigned: arcade)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; DragonFly x86_64; rv:106.0) Gecko/20100101 Firefox/106.0
Steps to reproduce:
Attempted debug build.
Actual results:
When running binary I hit this:
Assertion failure: false (MOZ_ASSERT_UNREACHABLE: PR_GetPhysicalMemorySize not implemented here), at /construction/www/firefox/firefox-108.0.1/image/SurfaceCache.cpp:1625
Expected results:
I think it should work nonetheless, maybe converted to warning?
Comment 2•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 3•3 years ago
|
||
Please create a phabricator patch for it:
https://firefox-source-docs.mozilla.org/contributing/contribution_quickref.html#firefox-contributors-quick-reference
Thanks.
Updated•3 years ago
|
Are you sure this should be phabricated? I'm just rising a question that this ASSERT always fail on my platform, probably memory detection should be properly fixed instead. The patch is pure illustration to describe how I was able to make build work.
Comment 5•3 years ago
|
||
(In reply to arcade from comment #4)
Are you sure this should be phabricated? I'm just rising a question that this ASSERT always fail on my platform, probably memory detection should be properly fixed instead. The patch is pure illustration to describe how I was able to make build work.
Any patches for Firefox goes through pabricator so yes, if you want this change that's the way (not sure if we have any check for DragonFly or is that a general BSD issue).
Added to phab:
Updated•3 years ago
|
Updated•3 years ago
|
Comment 9•3 years ago
|
||
| bugherder | ||
Description
•