Bug 1810343 - skip implementation check of PR_GetPhysicalMemorySize on DragonFly BSD r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D168350